# 5LIA0_Embedded_Visual_Control

./: Dockerfile  requirements.txt
devel/: .catkin  .rosinstall
devel/lib/pkgconfig/: template_package.pc
devel/share/template_package/cmake/: template_packageConfig.cmake
src/template_package/: nodes.py
src/template_package/launch/: work1.launch
src/template_package/src/: pub.py  sub.py
workshop4_motion_2191199/devel/: local_setup.sh
workshop4_motion_2191199/devel/include/motion_skapis/: dualImage.h
workshop4_motion_2191199/devel/lib/pkgconfig/: motion_skapis.pc
workshop4_motion_2191199/devel/share/motion_skapis/cmake/: motion_skapis-msg-extras.cmake  motion_skapis-msg-paths.cmake  (+1 more)
workshop4_motion_2191199/src/: launch.sh
workshop4_motion_2191199/src/motion_skapis/: CMakeLists.txt  package.xml
workshop4_motion_2191199/src/motion_skapis/launch/: motion_proc_node.launch  motion_pub_node.launch  motion_sub_node.launch
workshop4_motion_2191199/src/motion_skapis/msg/: dualImage.msg
workshop4_motion_2191199/src/motion_skapis/src/: processing_node.py  publisher.py  subscriber.py
workshop4_motion_2191199/src/motion_skapis/src/archive/: camera_final_subscriber.py  camera_processing_node.py  camera_publisher_node.py  fat_motion_subscriber_node.py  motion_publisher_node.py  motion_subscriber_node.py
workshop4_motion_2191199/src/motion_skapis/src/motorStuffcalibration/: Adafruit_I2C.py  Calibration.py  calibration.yaml  encoderDriver.py  gpio_motor_test.py  hat.py  main.py  motion_api.py  motorDriver.py  test_calibration.py  test_motion_api.py
(+10 files in other folders)
